fix UnsupportedOperationException by changing toList method to Collect(Collectors.toList())